Implemented unique name and edit contact functionality

--- a/src/components/content/styles.css
+++ b/src/components/content/styles.css
@@ -30,3 +30,15 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.edit-name-popupWrapper,.edit-contact-wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #e6e8e6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
