--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 *, *::after, *::before{
     box-sizing: border-box;
   }
+
+  html{
+    font-size: 62.5%;
+  }
   
   body {
-    /* margin: 10px; */
-    width: 100%;
+    margin: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
